2019-07-19  Harry Phillips  <hp257@eod-2.uscs.susx.ac.uk>

	* src/HWW/gg_ww_dim8.f90 (gg_ww_dim8): *** ADDED ***
	contains relevant helicity amplitudes for CP-even dimension-8
	operators contributing to gg->WW 

	* src/HWW/gg_WW_int.f (gg_ww_int):
	implemented contribution of dimension 8 operators to gg->WW

2018-03-16  Luke  <luke@Rus>

	* src/Inc/kappa.f (main): anomalous Yukawa couplings parameters
	for BSM di-boson studies

	* src/ZZ/gg_hzz_tb.f (gg_hZZ_tb):
	* src/ZZ/gg_ZZ_int.f (gg_ZZ_int):
	* src/ZZ/gg_ZZ_all.f (gg_ZZ_all):
	* src/ZZ/gg_ZZ_Hpi.f (gg_ZZ_Hpi):
	* src/ZZ/getggHZZamps.f (getggHZZamps):
	* src/HWW/gg_WW_int.f (gg_ww_int):
	* src/HWW/qqb_hww_tb.f (qqb_hww_tb):
	added in anomalous Yukawa couplings for top and bottom
	loops, as well as a contact ggH interaction


	* src/User/usercode.f90: added interfaces for JetVHeto library,
	ATLAS cuts for HWW, new histograms for observables of interest

	* src/Inc/jetvheto.f (main): JetVHeto global parameters and
	variables needed by MCFM

	* src/Procdep/resmNNLLint.f (resmNNLLint):
	* src/Procdep/resmNLLint.f (resmNLLint):
	added in dedicated functions for the calculation of resummation
	and the related expansions. Anything requiring convolutions
	between modified integrated dipoles and pdfs can be found in here.

	* src/Need/dipoles.f: added in additional dipoles to provide the
	luminosities needed to perform the resummation

	* src/Procdep/virtfin.f (virtfin): added function that extracts
	the finite part of the virtual corrections and adds the logs
	needed for resummation and matching


	* src/Inc/kpart.f (main): added in new modes for the resummation

	* src/Need/reader_input.f (reader_input):
	* src/Need/writeinput.f (writeinput):
	added I/O for resummation and anomalous Yukawa couplings.

	* src/Need/setrunname.f (setrunname): modified run name to include
	the resummation scale for resummation processes

	* src/Need/scaleset.f (scaleset): added setting of resummation
	scale Q for each event
