@@ -1,3 +1,13 @@
+2023-03-09  Daniel Gillies  <dc-gill1@d3-login01>
+
+	* Bin/Autotools/gnu2csv.py: Created an Autotools file to store the automation tools for making many runs
+
+	* Bin/Autotools/mkdat.py: Copied in mkdat.py
+
+	* Bin/Autotools/dat2gnu.py: Copied in dat2gnu.py
+
+	* src/HWW/gg_ww_dim8.f90: Test addition of zero
+
 2019-07-19  Harry Phillips  <hp257@eod-2.uscs.susx.ac.uk>
 
 	* src/HWW/gg_ww_dim8.f90 (gg_ww_dim8): *** ADDED ***
